[gd_scene load_steps=4 format=3 uid="uid://djwbo1fo54lte"]

[ext_resource type="Script" path="res://MVP/gift_info_card.gd" id="1_5b4mt"]
[ext_resource type="Texture2D" uid="uid://dmvjhj446hg3v" path="res://Arts/cat_toy_002_mouse3.png" id="1_7fef7"]
[ext_resource type="Texture2D" uid="uid://cxrsb1i8j807p" path="res://Arts/HUD_background_1.png" id="2_ok17p"]

[node name="GiftInfoCard" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 360.0
offset_bottom = 405.0
script = ExtResource("1_5b4mt")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ok17p")

[node name="Headline" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -182.5
offset_right = 137.0
offset_bottom = -124.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Aww! The cat left a gift for you! "
vertical_alignment = 1
autowrap_mode = 2

[node name="IconDisplay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -72.5
offset_right = 60.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7fef7")
expand_mode = 3
stretch_mode = 5

[node name="ToyName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -113.5
offset_right = 42.5
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "MOUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToyDesc" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 259.0
offset_right = 334.0
offset_bottom = 309.0
text = "This is a short description about the toy"
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -75.0
offset_right = 54.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.964706, 0.733333, 0.780392, 1)
text = "YAY!"
